# cmpe260-grpo

./: .gitignore  README.md  analyze.py  config.py  create_dataset.py  data.py  eval.py  evaluate.py  experiment_layout.py  pyproject.toml  reporting.py  res.csv  reward.py  run_p100_1gpus.sh  submit.sh  train.py
analysis/: analyse.py  metrics_exploration.ipynb
eval_results/Qwen2.5-1.5B-Instruct_20260302_114548/: eval_results.json
eval_results/output-curriculum-binary_20260315_114944/: eval_results.json
eval_results/output-curriculum-difficulty_weighted_20260315_172319/: eval_results.json
eval_results/output-curriculum-easy_penalty_20260315_165208/: eval_results.json
eval_results/output-random-binary_20260313/: eval_results.json
eval_results/output-random-difficulty_weighted_20260314_201224/: eval_results.json
eval_results/output-random-easy_penalty_20260313_203642/: eval_results.json
eval_results/output-stratified-binary_20260314_183029/: eval_results.json
eval_results/output-stratified-difficulty_weighted_20260314_192634/: eval_results.json
eval_results/output-stratified-easy_penalty_20260315_092237/: eval_results.json
