[project]
name = "grpo-difficulty-variance"
version = "0.1.0"
description = "The Effect of Intra-Group Difficulty Variance on RL for LLM Math Reasoning"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=4.6.1",
    "math-verify>=0.9.0",
    "matplotlib>=3.10.8",
    "ninja>=1.13.0",
    "pandas>=2.3.3",
    "setuptools>=82.0.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "trl>=0.29.0",
    "wandb>=0.25.0",
]
